@@ -242,7 +242,7 @@ public abstract class SingleColumnTimeAttribute<Owner> extends TimeAttribute<Own
         {
             e = (SingleColumnTimeAttribute) extractorWriter.createClass(attributeName, isNullablePrimitive, hasBusTime, busClassNameWithDots,
                     busClassName, isOptimistic, offHeapFieldOffset, offHeapNullBitsOffset, offHeapNullBitsPosition,
-                    "com/gs/fw/common/mithra/attribute/SingleColumnTimeAttribute", false, hasShadowAttribute).newInstance();
+                    "com/gs/fw/common/mithra/attribute/SingleColumnTimeAttribute", false, hasShadowAttribute).getDeclaredConstructor().newInstance();
         }
         catch (Exception excp)
         {
