@@ -1105,15 +1105,11 @@ public abstract class MithraAbstractObjectPortal implements MithraObjectPortal
     {
         try
         {
-            return bean.newInstance();
+            return bean.getDeclaredConstructor().newInstance();
         }
-        catch (InstantiationException e)
+        catch (ReflectiveOperationException e)
         {
             throw new MithraBusinessException("Error instantiating class " + bean.getName(), e);
-        }
-        catch (IllegalAccessException e)
-        {
-            throw new MithraBusinessException("No valid access to invoke constructor of class " + bean.getName(), e);
         }
     }
 
