@@ -111,15 +111,11 @@ public class RemoteAggregateResult  extends MithraRemoteResult
             RelatedFinder finderClass;
             try
             {
-                finderClass = (RelatedFinder) Class.forName(finderClassname).newInstance();
+                finderClass = (RelatedFinder) Class.forName(finderClassname).getDeclaredConstructor().newInstance();
             }
-            catch (InstantiationException e)
+            catch (ReflectiveOperationException e)
             {
-                throw new RuntimeException();
-            }
-            catch (IllegalAccessException e)
-            {
-                throw new RuntimeException();
+                throw new RuntimeException(e);
             }
             Object sourceAttributeValue = in.readObject();
             String databaseIdentifier = (String) in.readObject();
