@@ -58,15 +58,11 @@ public class RemoteExtractOperationDatabaseIdentifiersResult extends MithraRemot
             RelatedFinder finderClass = null;
             try
             {
-                finderClass = (RelatedFinder) Class.forName(finderClassname).newInstance();
+                finderClass = (RelatedFinder) Class.forName(finderClassname).getDeclaredConstructor().newInstance();
             }
-            catch (InstantiationException e)
+            catch (ReflectiveOperationException e)
             {
-                throw new RuntimeException();
-            }
-            catch (IllegalAccessException e)
-            {
-                throw new RuntimeException();
+                throw new RuntimeException(e);
             }
             Object sourceAttributeValue = in.readObject();
             String databaseIdentifier = in.readUTF();
