@@ -560,23 +560,11 @@ public class MithraConfigurationManager
         try
         {
             Class dboClass = Class.forName(objectFactoryClassName);
-            MithraObjectDeserializer deserializer = (MithraObjectDeserializer) dboClass.newInstance();
+            MithraObjectDeserializer deserializer = (MithraObjectDeserializer) dboClass.getDeclaredConstructor().newInstance();
             initSimulatedSequences(deserializer);
             return deserializer;
         }
-        catch (IllegalAccessException e)
-        {
-            final String msg = "Could not access class or constructor for class " + objectFactoryClassName;
-            getLogger().error(msg, e);
-            mithraInitializationErrors.add(msg);
-        }
-        catch (ClassNotFoundException e)
-        {
-            final String msg = "Class " + objectFactoryClassName + " could not be found";
-            getLogger().error(msg, e);
-            mithraInitializationErrors.add(msg);
-        }
-        catch (InstantiationException e)
+        catch (ReflectiveOperationException e)
         {
             final String msg = "Could not instantiate class " + objectFactoryClassName;
             getLogger().error(msg, e);
@@ -1609,22 +1597,10 @@ public class MithraConfigurationManager
         try
         {
             Class lopClass = Class.forName(loadOperationProviderName);
-            LoadOperationProvider loadOperationProvider = (LoadOperationProvider) lopClass.newInstance();
+            LoadOperationProvider loadOperationProvider = (LoadOperationProvider) lopClass.getDeclaredConstructor().newInstance();
             return loadOperationProvider;
         }
-        catch (IllegalAccessException e)
-        {
-            final String msg = "Could not access class or constructor for class " + loadOperationProviderName;
-            getLogger().error(msg, e);
-            mithraInitializationErrors.add(msg);
-        }
-        catch (ClassNotFoundException e)
-        {
-            final String msg = "Class " + loadOperationProviderName + " could not be found";
-            getLogger().error(msg, e);
-            mithraInitializationErrors.add(msg);
-        }
-        catch (InstantiationException e)
+        catch (ReflectiveOperationException e)
         {
             final String msg = "Could not instantiate class " + loadOperationProviderName;
             getLogger().error(msg, e);
