@@ -58,7 +58,7 @@ public class DerbyServer
     {
         getLogger().info("Starting Network Server");
         System.setProperty("derby.drda.startNetworkServer", "true");
-        Class.forName("org.apache.derby.jdbc.EmbeddedDriver").newInstance();
+        Class.forName("org.apache.derby.jdbc.EmbeddedDriver").getDeclaredConstructor().newInstance();
         getLogger().info("Network Server Started");
         new NetworkServerControl();
     }
